tests/regression/errors/basic/undefined_var_12.csd
// Undefined variable test 12
vibez.spill("Using undefined:", undefined_var_12)
sus result drip = missing_variable + 12
